--- a/style.css
+++ b/style.css
@@ -1,3 +1,47 @@
-#entrada, #botao{
+
+body{
+    background-color: #f5f5f5;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
 }
+
+#titulo, #entrada, #botao{
+    display: flex;
+    margin-bottom: 25px;
+}
+
+#titulo{
+    font-size: 36px;
+}
+
+#entrada{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#entrada input[type="text"]{
+    width: 80%;
+    height: 50px;
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    padding: 0 0 0 20px;
+    font-size: 30px;
+}
+
+#botao button{
+    background-color: #ffffff;
+    border-radius: 50px;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+}
+
+#botao button:hover{
+    background-color: aliceblue;
+}
+
