--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 
 body{
-    background-color: #f5f5f5;
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 50px;
+    padding-top: 20px;
+    margin: 0 20px;
 }
 
 #titulo, #entrada, #botao{
@@ -15,7 +16,7 @@ body{
 
 #titulo{
     font-size: 28px;
-    text-align:center;
+    text-align: center;
 }
 
 #entrada{
@@ -44,5 +45,19 @@ body{
 
 #botao button:hover{
     background-color: aliceblue;
+}
+
+#frase{
+    background-color: #262626;
+    width: 90%;
+    height: 60vh;
+    padding: 20px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+    font-size: 20px;
 }
 
