--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 
 body{
-    background-color: #000000;
+    background: linear-gradient(-90deg, rgba(118,104,207,1) 0%, rgba(171,124,194,1) 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-top: 20px;
     margin: 0 20px;
+
 }
 
 #titulo, #entrada, #botao{
@@ -20,11 +21,18 @@ body{
     color: white;
 }
 
-#entrada{
+#entrada,
+#frase{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#frase{
+    height: 70vh;
+    flex-direction: column;
+    text-align: start;
 }
 
 #entrada input[type="text"]{
@@ -44,10 +52,53 @@ body{
     cursor: pointer;
 }
 
+#frase p{
+    color: white;
+    font-size: 30px;
+}
+
+#frase .data{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+#frase .data span{
+    content: "";
+    width: 3px;
+    height: 25px;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#frase .data p{
+    margin-left: 10px;
+    font-size: 12px;
+}
+
 #botao button:hover{
     background-color: aliceblue;
 }
 
+#imagem{
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    z-index: -2;
+    width: 100%;
+}
+
+#imagem img{
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    opacity: 10%;
+}
+
+/*
 #frase{
     background-color: #262626;
     width: 90%;
@@ -61,4 +112,5 @@ body{
     text-align: center;
     font-size: 20px;
 }
+*/
 
