--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
 body{
-    background: linear-gradient(-90deg, rgba(118,104,207,1) 0%, rgba(171,124,194,1) 100%);
+    transition: background 0.5s ease; /* Transição suave para a mudança de cor */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-top: 20px;
     margin: 0 20px;
-
+    font-family: 'Times New Roman', Times, serif;
 }
 
 #titulo, #entrada, #botao{
